Show all models with --verbose flag

--- a/.env-example
+++ b/.env-example
@@ -1,2 +1,2 @@
 export GPT_API_KEY = Your - OpenAI - API - KEY
-export MAX_TOKENS = 3000 //4097 max for gpt-3.5-turbo-0301
+export MAX_TOKENS = 3000 //4097 max for davinci-search-query
